[panel] Ignore overlapping monitors and just use the largest one

http://bugzilla.gnome.org/show_bug.cgi?id=530969